@@ -11,7 +11,7 @@
 	<artifactId>commons-jvm-parent</artifactId>
 	<name>ERI Commons - JVM Extensions (Parent)</name>
 	<description>Shared JVM language extensions</description>
-	<version>2.6.9</version>
+	<version>2.6.10</version>
 	<inceptionYear>2014</inceptionYear>
 	<packaging>pom</packaging>
 	
@@ -84,10 +84,12 @@
 		<plugins>
 		   	<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.2</version>
+				<version>3.0.0-M8</version>
 				<configuration>
 					<!-- See https://javachannel.org/posts/help-my-java-locale-is-wrong-in-jdk11/ -->
-					<argLine>-Djava.locale.providers=COMPAT,CLDR</argLine>
+					<systemPropertyVariables>
+						<java.locale.providers>COMPAT,CLDR,SPI</java.locale.providers>
+					</systemPropertyVariables>
 				</configuration>
 			</plugin>
     	</plugins>
